--- a/index.html
+++ b/index.html
@@ -3,242 +3,283 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Vikash M | AI ML Engineer</title>
+<title>Vikash | AI/ML Engineer</title>
 
 <style>
-/* ======================
-   RESET
-====================== */
+/* ===============================
+   THEME VARIABLES
+=============================== */
+:root{
+  --bg:#0b0b12;
+  --text:#ffffff;
+  --glass:rgba(255,255,255,0.08);
+  --border:rgba(255,255,255,0.15);
+  --primary:#7c3aed;
+}
+
+body.light{
+  --bg:#f6f7fb;
+  --text:#111;
+  --glass:rgba(255,255,255,0.6);
+  --border:rgba(0,0,0,0.15);
+  --primary:#6d28d9;
+}
+
+/* ===============================
+   BASE
+=============================== */
 *{
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  font-family:system-ui,-apple-system,sans-serif;
 }
-
-html{scroll-behavior:smooth;}
 
 body{
-  background:#0a0a0f;
-  color:white;
+  background:var(--bg);
+  color:var(--text);
   overflow-x:hidden;
+  transition:.3s;
 }
 
-/* ======================
-   TRUE iOS GLASS
-====================== */
+section{
+  padding:80px 8%;
+}
+
+/* ===============================
+   GLASS MORPHISM
+=============================== */
 .glass{
-  background:rgba(255,255,255,0.08);
-  backdrop-filter:blur(24px) saturate(160%);
-  -webkit-backdrop-filter:blur(24px) saturate(160%);
-  border:1px solid rgba(255,255,255,0.12);
+  background:var(--glass);
+  backdrop-filter:blur(25px) saturate(160%);
+  -webkit-backdrop-filter:blur(25px) saturate(160%);
+  border:1px solid var(--border);
   border-radius:22px;
 }
 
-/* ======================
-   PARTICLES
-====================== */
-#particles{
-  position:fixed;
-  width:100%;
-  height:100%;
-  z-index:-2;
-}
-
-/* ======================
-   CURSOR GLOW
-====================== */
-.cursor-glow{
-  position:fixed;
-  width:320px;
-  height:320px;
-  border-radius:50%;
-  background:radial-gradient(circle, rgba(124,58,237,.45) 0%, transparent 70%);
-  pointer-events:none;
-  transform:translate(-50%,-50%);
-  z-index:-1;
-}
-
-/* ======================
+/* ===============================
    NAVBAR
-====================== */
+=============================== */
 nav{
-  position:sticky;
-  top:0;
+  position:fixed;
+  top:20px;
+  left:50%;
+  transform:translateX(-50%);
+  padding:10px 30px;
   display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:20px 8%;
-  z-index:10;
+  gap:30px;
+  z-index:1000;
 }
 
-nav button{
-  background:none;
-  border:none;
-  color:white;
-  cursor:pointer;
-  margin-left:20px;
+nav a{
+  text-decoration:none;
+  color:var(--text);
+  font-weight:600;
 }
 
 .toggle{
-  background:#7c3aed;
-  padding:7px 14px;
-  border-radius:10px;
+  cursor:pointer;
+  padding:6px 14px;
+  border-radius:14px;
+  background:var(--primary);
+  color:#fff;
+  font-size:14px;
 }
 
-/* ======================
-   SECTIONS
-====================== */
-section{
-  padding:100px 8%;
-}
-
-/* ======================
+/* ===============================
    HERO
-====================== */
+=============================== */
 .hero{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
   text-align:center;
-  max-width:900px;
-  margin:auto;
 }
 
 .hero h1{
-  font-size:56px;
-  margin-bottom:15px;
+  font-size:60px;
 }
 
-.hero p{
-  opacity:.8;
-  line-height:1.6;
+.hero span{
+  color:var(--primary);
+}
+
+.buttons{
+  margin-top:30px;
+  display:flex;
+  gap:20px;
 }
 
 .btn{
-  margin-top:30px;
-  padding:14px 28px;
-  background:#7c3aed;
-  border:none;
-  border-radius:12px;
-  color:white;
-  cursor:pointer;
+  padding:12px 28px;
+  border-radius:18px;
+  background:var(--primary);
+  color:#fff;
+  text-decoration:none;
+  transition:.3s;
 }
 
-/* ======================
-   GRID
-====================== */
+.btn:hover{
+  transform:scale(1.08);
+}
+
+/* ===============================
+   GRID LAYOUT
+=============================== */
 .grid{
   display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
   gap:30px;
-  margin-top:40px;
 }
 
-/* PROJECTS bigger */
-.projects{
-  grid-template-columns:repeat(auto-fit,minmax(350px,1fr));
-}
-
-/* SKILLS bigger */
-.skills{
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-}
-
-/* ======================
-   CARDS
-====================== */
+/* ===============================
+   PROJECT CARDS
+=============================== */
 .card{
-  padding:28px;
-  transition:.25s;
+  padding:25px;
+  transition:.3s;
 }
 
 .card:hover{
-  transform:translateY(-6px);
+  transform:translateY(-6px) scale(1.03);
+  border-color:var(--primary);
 }
 
-/* ======================
-   CONTACT BUTTONS
-====================== */
+.card h3{
+  margin-bottom:10px;
+  color:var(--primary);
+}
+
+/* ===============================
+   SKILLS
+=============================== */
+.skill-group{
+  padding:25px;
+}
+
+.skill-group h3{
+  margin-bottom:15px;
+  color:var(--primary);
+}
+
+.skills{
+  display:flex;
+  flex-wrap:wrap;
+  gap:10px;
+}
+
+.skill{
+  padding:8px 14px;
+  border-radius:14px;
+  background:var(--glass);
+  border:1px solid var(--border);
+  transition:.3s;
+}
+
+.skill:hover{
+  background:var(--primary);
+  color:#fff;
+  transform:scale(1.1);
+}
+
+/* ===============================
+   CONTACT
+=============================== */
 .contact-buttons{
   display:flex;
   justify-content:center;
-  gap:25px;
-  margin-top:35px;
+  gap:20px;
+  flex-wrap:wrap;
 }
 
-.contact-buttons button{
-  padding:12px 25px;
-  background:#7c3aed;
-  border:none;
-  border-radius:12px;
-  color:white;
-  cursor:pointer;
+.contact-btn{
+  padding:12px 24px;
+  border-radius:18px;
+  background:var(--primary);
+  color:#fff;
+  text-decoration:none;
+  transition:.3s;
 }
 
-/* ======================
-   FOOTER
-====================== */
+.contact-btn:hover{
+  transform:scale(1.1);
+}
+
 footer{
   text-align:center;
-  padding:50px;
-  opacity:.6;
+  padding:30px;
+  opacity:.7;
+}
+
+/* ===============================
+   CURSOR GLOW
+=============================== */
+.cursor{
+  width:280px;
+  height:280px;
+  position:fixed;
+  border-radius:50%;
+  pointer-events:none;
+  background:radial-gradient(circle,var(--primary) 0%, transparent 60%);
+  filter:blur(120px);
+  opacity:.4;
+  z-index:-1;
 }
 </style>
 </head>
 
 <body>
 
-<canvas id="particles"></canvas>
-<div class="cursor-glow"></div>
+<div class="cursor"></div>
 
 <!-- NAV -->
 <nav class="glass">
-  <h2>Vikash</h2>
-  <div>
-    <button onclick="scrollToId('projects')">Projects</button>
-    <button onclick="scrollToId('skills')">Skills</button>
-    <button onclick="scrollToId('contact')">Contact</button>
-    <button class="toggle" onclick="toggleTheme()">Light Mode</button>
-  </div>
+  <a href="#projects">Projects</a>
+  <a href="#skills">Skills</a>
+  <a href="#contact">Contact</a>
+  <div class="toggle" onclick="toggleTheme()">Light Mode</div>
 </nav>
 
 <!-- HERO -->
 <section class="hero">
-  <h1>AI / ML Engineer</h1>
-  <p>
-    Computer Science graduate passionate about Machine Learning, Generative AI and Automation.
-    I build practical AI systems that solve real business problems using Python, APIs and modern tools.
-  </p>
-  <button class="btn" onclick="window.open('resume.pdf')">Download Resume</button>
+  <h1>Hi, I'm <span>Vikash</span></h1>
+  <p>AI/ML enthusiast and early career engineer with hands on experience in Python, Machine Learning, and system integration. I’ve built practical projects including customer segmentation, churn prediction models, and a RAG-based AI assistant, along with REST APIs and automation workflows. I enjoy turning data into real solutions and writing clean, reliable code. Eager to contribute, learn quickly, and grow as an AI/ML and software engineer in real world environments</p>
+
+  <div class="buttons">
+    <a class="btn" href="#projects">View Projects</a>
+    <a class="btn" href="resume.pdf">Resume</a>
+  </div>
 </section>
 
 <!-- PROJECTS -->
 <section id="projects">
   <h2>Projects</h2>
+  <br>
+  <div class="grid">
 
-  <div class="grid projects">
-
-    <div class="glass card">
+    <div class="card glass">
       <h3>Customer Churn Prediction</h3>
       <p>
-        Built an end-to-end ML pipeline to identify customers likely to leave a telecom company.
-        Performed data cleaning, feature engineering and trained Logistic Regression & Random Forest models.
-        Achieved ~85% accuracy and helped simulate targeted retention strategies.
+      Built an end-to-end ML model using Python and Scikit-learn to predict customers likely to churn.
+      Performed preprocessing, feature engineering, model tuning and achieved strong accuracy to help businesses retain customers proactively.
       </p>
     </div>
 
-    <div class="glass card">
-      <h3>Customer Segmentation</h3>
+    <div class="card glass">
+      <h3>RAG AI Assistant</h3>
       <p>
-        Used K-Means clustering to group customers based on purchase behaviour.
-        Created meaningful segments for marketing teams to personalize offers.
-        Improved decision-making through data visualization and insights.
+      Developed a Retrieval-Augmented Generation chatbot using embeddings and vector search.
+      Enables document-aware answers with LLMs, improving contextual accuracy and reducing hallucinations.
       </p>
     </div>
 
-    <div class="glass card">
-      <h3>RAG AI Chatbot (Generative AI)</h3>
+    <div class="card glass">
+      <h3>System Integration APIs</h3>
       <p>
-        Developed a Retrieval-Augmented Generation chatbot using embeddings and vector search.
-        Users can upload documents and ask questions with accurate contextual answers.
-        Built with Python, LLM APIs and semantic search techniques.
+      Created REST APIs and automation scripts to integrate services and streamline workflows.
+      Focused on reliability, scalability and clean architecture for production-ready deployment.
       </p>
     </div>
 
@@ -248,80 +289,74 @@ footer{
 <!-- SKILLS -->
 <section id="skills">
   <h2>Skills</h2>
+  <br>
 
-  <div class="grid skills">
+  <div class="grid">
 
-    <div class="glass card">
+    <div class="skill-group glass">
       <h3>Machine Learning</h3>
-      Python, NumPy, Pandas, Scikit-learn, Data Cleaning, Feature Engineering, Model Evaluation
+      <div class="skills">
+        <span class="skill">Python</span>
+        <span class="skill">Scikit-learn</span>
+        <span class="skill">Pandas</span>
+        <span class="skill">NumPy</span>
+        <span class="skill">Model Evaluation</span>
+      </div>
     </div>
 
-    <div class="glass card">
-      <h3>Data & Visualization</h3>
-      Matplotlib, Seaborn, Data Analysis, Exploratory Data Analysis, Charts & Insights
+    <div class="skill-group glass">
+      <h3>Data & Integration</h3>
+      <div class="skills">
+        <span class="skill">REST APIs</span>
+        <span class="skill">System Integration</span>
+        <span class="skill">Automation Scripts</span>
+        <span class="skill">JSON</span>
+      </div>
     </div>
 
-    <div class="glass card">
-      <h3>Integration & Automation</h3>
-      REST APIs, Python Automation, System Integration, Web Scraping, Scripting
-    </div>
-
-    <div class="glass card">
+    <div class="skill-group glass">
       <h3>Tools</h3>
-      Git, GitHub, Linux, VS Code, Jupyter Notebook, Deployment Basics
+      <div class="skills">
+        <span class="skill">Git</span>
+        <span class="skill">GitHub</span>
+        <span class="skill">Linux</span>
+        <span class="skill">VS Code</span>
+      </div>
     </div>
 
   </div>
 </section>
 
 <!-- CONTACT -->
-<section id="contact" style="text-align:center">
-  <h2>Contact</h2>
+<section id="contact">
+  <h2 style="text-align:center;">Contact</h2>
+  <br>
 
   <div class="contact-buttons">
-    <button onclick="location.href='mailto:vikashmahesh27@email.com'">Email</button>
-    <button onclick="window.open('https://github.com/Vikash4646')">GitHub</button>
-    <button onclick="window.open('https://linkedin.com/in/vikash-mahudeesvaran')">LinkedIn</button>
+    <a class="contact-btn" href="mailto:vikashmahesh27@gmail.com@gmail.com">Email</a>
+    <a class="contact-btn" href="https://github.com/Vikash4646">GitHub</a>
+    <a class="contact-btn" href="https://linkedin.com/in/vikash-mahudeesvaran">LinkedIn</a>
   </div>
 </section>
 
 <footer>
-© 2026 Vikash | Built with ❤️
+  © 2026 Vikash
 </footer>
 
 <script>
-/* glow */
-const glow=document.querySelector(".cursor-glow");
-document.addEventListener("mousemove",e=>{
-  glow.style.left=e.clientX+"px";
-  glow.style.top=e.clientY+"px";
+/* THEME */
+function toggleTheme(){
+  document.body.classList.toggle("light");
+  const btn=document.querySelector(".toggle");
+  btn.innerText=document.body.classList.contains("light") ? "Dark Mode":"Light Mode";
+}
+
+/* CURSOR GLOW */
+const cursor=document.querySelector(".cursor");
+document.addEventListener("mousemove",(e)=>{
+  cursor.style.left=e.clientX-140+"px";
+  cursor.style.top=e.clientY-140+"px";
 });
-
-/* particles */
-const canvas=document.getElementById("particles");
-const ctx=canvas.getContext("2d");
-canvas.width=innerWidth;
-canvas.height=innerHeight;
-
-let pts=[];
-for(let i=0;i<70;i++){
- pts.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,dx:0.4*Math.random(),dy:0.4*Math.random()});
-}
-
-function draw(){
- ctx.clearRect(0,0,canvas.width,canvas.height);
- ctx.fillStyle="rgba(124,58,237,.25)";
- pts.forEach(p=>{
-  p.x+=p.dx; p.y+=p.dy;
-  if(p.x>canvas.width||p.y>canvas.height){p.x=0;p.y=0;}
-  ctx.beginPath(); ctx.arc(p.x,p.y,2,0,6.28); ctx.fill();
- });
- requestAnimationFrame(draw);
-}
-draw();
-
-function scrollToId(id){document.getElementById(id).scrollIntoView();}
-function toggleTheme(){document.body.classList.toggle("light");}
 </script>
 
 </body>
